--- a/css/styles.css
+++ b/css/styles.css
@@ -1,413 +1,336 @@
-:root {
-  --h2-color: #2e2f42;
-  --ırıs-color: #4d5ae5;
-  --p-color: #434455;
-}
-
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-html,
 body {
   font-family: 'Roboto', sans-serif;
-  color: var(--p-color);
+  color: #434455;
   background-color: #fff;
-  font-weight: 400;
+}
+
+a {
+  text-decoration: none;
+}
+
+img {
+  display: block;
+}
+
+ul,
+ol {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+}
+
+button {
+  cursor: pointer;
+}
+
+.accent {
+  color: #2e2f42;
 }
 
 .container {
-  position: relative;
-  overflow: hidden;
-  width: 1440px;
+  max-width: 1158px;
+  padding: 0 15px;
   margin: 0 auto;
 }
 
-header {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  position: relative;
-  overflow: hidden;
-  width: 1440px;
-  padding: 24px 0;
-  align-items: center;
+.logo {
   font-family: 'Raleway', sans-serif;
-  border-bottom: 1px solid #e7e9fc;
-}
-
-.color-logo {
-  color: #2e2f42;
-}
-
-.box-1 > div a {
-  text-decoration: none;
-}
-
-header .nav {
-  display: flex;
-  position: relative;
-  flex-direction: row;
-  justify-content: flex-end;
-}
-
-header .logo1 a {
-  color: var(--ırıs-color);
-}
-
-header .logo1 {
-  width: 115px;
+  font-weight: 700;
   font-size: 18px;
-  line-height: 1.16667;
+  line-height: 1.17;
   letter-spacing: 0.03em;
-  text-align: center;
-  padding-left: 156px;
+  text-transform: uppercase;
+  color: #4d5ae5;
+  display: inline-block;
 }
 
-header .nav .logo2 {
-  font-family: 'Roboto', sans-serif;
-  width: 261px;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
+.footer .black-white {
+  color: #f4f4fd;
 }
 
-header .nav .logo3 address {
-  font-family: 'Roboto', sans-serif;
-  display: flex;
-  align-items: center;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: #434455;
-  padding-left: 332px;
-  padding-right: 156px;
-  gap: 40px;
+.header-link:hover,
+.header-link:focus {
+  color: #404bbf;
 }
 
-header .nav .logo2 .list1 li a:hover {
-  color: #3c49c0;
-}
-
-header .nav .logo3 address p:hover {
-  color: #3c49c0;
-  cursor: pointer;
-}
-
-.title button:hover {
+.cta:hover,
+.cta:focus {
   background-color: #404bbf;
 }
 
-header .nav .logo2 .list1 {
-  list-style-type: none;
-  display: flex;
-  justify-content: space-between;
-  margin: 0;
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
   padding: 0;
-  width: 100%;
+
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+/* ------------------HEADER------------------------------ */
+.header {
+  border-bottom: 1px solid #e7e9fc;
+}
+
+.header .container {
+  display: flex;
+  align-items: center;
+}
+
+.header-nav {
+  display: flex;
+  align-items: center;
+}
+
+.header-nav-logo {
+  margin-right: 76px;
+  padding: 24px 0;
+}
+
+.header-nav-list {
+  display: flex;
+  align-items: center;
   gap: 40px;
 }
 
-header .nav .logo2 .list1 a {
+.header-nav-item {
+}
+
+.header-nav-link {
+  display: block;
+  padding: 24px 0;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
   color: #2e2f42;
 }
 
-/* HEADER BİTİŞ*/
-
-/* BÜYÜK MAVİ ALAN*/
-.title {
-  width: 1440px;
-  display: flex;
-  flex-direction: column;
-  background: #2e2f42;
-  align-items: center;
-  gap: 48px;
+.header-address {
+  font-style: normal;
+  margin-left: auto;
 }
 
-.title-text {
-  font-family: 'Roboto', sans-serif;
-  font-weight: 700;
+.header-address-list {
+  display: flex;
+  align-items: center;
+  gap: 40px;
+}
+
+.header-address-item {
+}
+
+.header-address-link {
+  display: inline-block;
+  padding-top: 24px;
+  padding-bottom: 24px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #434455;
+}
+
+/* ------------------HEADER------------------------------ */
+
+/* ------------------HERO------------------------------ */
+.hero {
+  background-color: #2e2f42;
+  padding: 188px 0;
+}
+
+.hero-title {
   font-size: 56px;
-  line-height: 1.07143;
+  line-height: 1.07;
   letter-spacing: 0.02em;
   text-align: center;
   color: #fff;
-  position: relative;
-  padding-top: 168px;
+  max-width: 496px;
+  margin-right: auto;
+  margin-left: auto;
+  margin-bottom: 48px;
 }
 
-.title button {
-  font-family: 'Roboto', sans-serif;
-  border-radius: 4px;
-  padding: 16px 32px;
-  width: 169px;
+.hero-button {
+  background-color: #4d5ae5;
   font-weight: 500;
-  font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.04em;
   color: #fff;
-  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
-  background: var(--ırıs-color);
-  text-align: center;
-  position: relative;
-  cursor: pointer;
-  white-space: nowrap;
-  margin-bottom: 186px;
+  border-radius: 4px;
+  padding: 16px 32px;
+  display: block;
+  margin: 0 auto;
+  height: 56px;
+  min-width: 169px;
+  border: none;
 }
 
-/* BEYAZ YAZILI ALAN */
-.white-text {
-  width: 1128px;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
+/* ------------------HERO------------------------------ */
+
+/* ------------------FEATURES------------------------------ */
+
+.features {
+  padding: 120px 0;
 }
 
-.white-text ul {
+.features-list {
   display: flex;
-  padding: 120px 156px;
   gap: 24px;
-  list-style-type: none;
 }
 
-.white-text li {
-  display: inline-block;
-  width: 264px;
-  vertical-align: center;
+.features-item {
+  flex-basis: calc((100% - 72px) / 4);
 }
 
-/* OUR TEAM */
-.card-sec .container {
-  width: 1440px;
-  background: #f4f4fd;
-  display: flex;
-  flex-direction: column;
-  padding-bottom: 240px;
-}
-
-.card-sec .container .ourteam {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  padding-top: 120px;
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.11111;
+.features-subtitle {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
   letter-spacing: 0.02em;
-  text-align: center;
-  color: var(--h2-color);
+  color: #2e2f42;
+  margin-bottom: 8px;
 }
 
-.card-sec .container ul {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  gap: 24px;
-  list-style-type: none;
-  padding: 72px 156px 120px 156px;
+.features-text {
+  line-height: 1.5;
+  letter-spacing: 0.02em;
 }
 
-.card-sec .container li {
-  display: inline-block;
-  width: 264px;
-  height: 104px;
-  vertical-align: center;
+/* ------------------FEATURES------------------------------ */
+
+/* ------------------TEAM------------------------------ */
+
+.team {
+  background-color: #f4f4fd;
+  padding: 120px 0;
 }
 
-.card-sec .container .camila,
-.card-sec .container .mark,
-.card-sec .container .tom,
-.card-sec .container .daniel {
-  width: 264px;
-  display: flex;
-  flex-direction: column;
-  gap: 0;
-}
-
-.card-sec .container .mark-text,
-.card-sec .container .tom-text,
-.card-sec .container .camila-text,
-.card-sec .container .daniel-text {
-  width: 264px;
-  height: 120px;
-  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
-    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
-  background: #fff;
-  text-align: center;
-  display: flex;
-  position: relative;
-  flex-direction: column;
-  padding: 32px 16px;
-  gap: 8px;
-}
-
-.card-sec .container .mark-text h3,
-.card-sec .container .tom-text h3,
-.card-sec .container .camila-text h3,
-.card-sec .container .daniel-text h3 {
-  font-size: 18px;
-}
-
-.card-sec .container .mark-text p,
-.card-sec .container .tom-text p,
-.card-sec .container .camila-text p,
-.card-sec .container .daniel-text p {
-  font-size: 14px;
-}
-
-/* OUR PORTFOLIO*/
-.portfolio-sec .container {
-  width: 1128px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  background: #fff;
-  position: relative;
-  margin: 120px 156px;
-  gap: 72px;
-}
-
-.portfolio-sec .container .ourportfolio {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  font-weight: 700;
+.team-title {
   font-size: 36px;
-  line-height: 1.11111;
+  text-transform: capitalize;
+  line-height: 1.11;
   letter-spacing: 0.02em;
   text-align: center;
   color: #2e2f42;
-  width: 218px;
-  white-space: nowrap;
-  align-items: center;
+  margin-bottom: 72px;
 }
 
-.portfolio-sec .container .portfolio-one ul {
+.team-list {
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  flex-wrap: nowrap;
-  list-style-type: none;
   gap: 24px;
 }
 
-.portfolio-sec .container .portfolio-two ul {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  flex-wrap: nowrap;
-  list-style-type: none;
-  gap: 24px;
-}
-
-.portfolio-sec .container .portfolio-one li {
-  display: inline-block;
-  width: 360px;
-  vertical-align: center;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-}
-
-.portfolio-sec .container li {
-  display: inline-block;
-  width: 360px;
-  vertical-align: center;
-}
-
-.portfolio1,
-.portfolio2,
-.portfolio3,
-.portfolio4,
-.portfolio5,
-.portfolio6 {
-  width: 360px;
-  background: #fff;
+.team-item {
+  background-color: #fff;
   border-radius: 0 0 4px 4px;
-  display: flex;
-  flex-direction: column;
-  gap: 0;
+
+  width: calc((100% - 72px) / 4);
 }
 
-.portfolio1 .portfolio-text1,
-.portfolio2 .portfolio-text2,
-.portfolio3 .portfolio-text3 {
+.team-image {
+}
+
+.team-subtitle {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  text-align: center;
+  color: #2e2f42;
+  margin-bottom: 8px;
+}
+
+.team-text {
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  text-align: center;
+}
+
+.team-border {
+  padding: 32px 0px;
+}
+
+/* ------------------TEAM------------------------------ */
+
+/* ------------------PORTFOLIO------------------------------ */
+.portfolio {
+  padding: 120px 0;
+}
+
+.portfolio-title {
+  font-size: 36px;
+  text-transform: capitalize;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+  text-align: center;
+  color: #2e2f42;
+  margin-bottom: 72px;
+}
+
+.portfolio-list {
+  display: flex;
+  flex-wrap: wrap;
+  column-gap: 24px;
+  row-gap: 48px;
+}
+
+.portfolio-item {
+  width: calc((100% - 48px) / 3);
+}
+
+.portfolio-border {
   border-bottom: 1px solid #e7e9fc;
   border-left: 1px solid #e7e9fc;
   border-right: 1px solid #e7e9fc;
-  padding: 32px 0px 32px 16px;
-  width: 360px;
-  display: flex;
-  position: relative;
-  flex-direction: column;
-  gap: 8px;
+  padding: 32px 16px;
 }
 
-.portfolio4 .portfolio-text4,
-.portfolio5 .portfolio-text5,
-.portfolio6 .portfolio-text6 {
-  border-bottom: 1px solid #e7e9fc;
-  border-left: 1px solid #e7e9fc;
-  border-right: 1px solid #e7e9fc;
-  padding: 32px 0px 32px 16px;
-  width: 360px;
-  display: flex;
-  position: relative;
-  flex-direction: column;
-  gap: 8px;
+.portfolio-img {
 }
 
-/* MAİN BİTİŞ*/
-/* Footer */
-.ftr .container {
-  width: 1440px;
-  font-family: 'Raleway', sans-serif;
-  background: var(--h2-color);
-  position: relative;
+.portfolio-subtitle {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+  margin-bottom: 8px;
 }
 
-.ftr .container > .last-logo {
-  width: 264px;
-  background: #2e2f42;
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  gap: 16px;
-  padding-top: 100px;
-  padding-left: 156px;
-  padding-bottom: 100px;
+.portfolio-text {
+  line-height: 1.5;
+  letter-spacing: 0.02em;
 }
 
-.ftr .container .last-logo .last-a {
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 1.16667;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
+/* ------------------PORTFOLIO------------------------------ */
+
+/* ------------------FOOTER------------------------------ */
+.footer {
+  background-color: #2e2f42;
+  padding: 100px 0;
 }
 
-.ftr .container .last-logo .last-a a {
-  color: var(--ırıs-color);
+.footer-logo {
+  margin-bottom: 16px;
+  display: inline-block;
 }
 
-.ftr .container .last-logo .last-p {
-  font-family: 'Roboto', sans-serif;
-  font-weight: 400;
-  font-size: 16px;
+.footer-text {
+  max-width: 264px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #f4f4fd;
-  width: 264px;
-}
-
-.ftr .container .last-logo .last-a .color-logo {
-  color: #f4f4fd;
-}
-
-.ftr .container a {
-  text-decoration: none;
-  display: inline-block;
 }
