--- a/css/styles.css
+++ b/css/styles.css
@@ -1,24 +1,22 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   font-family: 'Roboto', sans-serif;
   color: #434455;
-  background-color: #fff;
+  background: white;
 }
-
 a {
   text-decoration: none;
 }
 
+li {
+  list-style: none;
+}
 img {
   display: block;
 }
-
-ul,
-ol {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-}
-
 h1,
 h2,
 h3,
@@ -28,21 +26,40 @@ h6,
 p {
   margin: 0;
 }
-
-button {
-  cursor: pointer;
+ul {
+  margin: 0;
+  padding: 0;
 }
-
-.accent {
-  color: #2e2f42;
-}
-
 .container {
   max-width: 1158px;
-  padding: 0 15px;
-  margin: 0 auto;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
 }
-
+.header {
+  border-bottom: 1px solid #e7e9fc;
+}
+.header .container {
+  display: flex;
+  align-items: center;
+}
+.nav {
+  display: flex;
+  align-items: center;
+}
+.logo {
+  padding: 24px 0;
+}
+.logo span {
+  font-family: 'Raleway', sans-serif;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 117%;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #2e2f42;
+}
 .logo {
   font-family: 'Raleway', sans-serif;
   font-weight: 700;
@@ -50,24 +67,103 @@ button {
   line-height: 1.17;
   letter-spacing: 0.03em;
   text-transform: uppercase;
+  margin-right: 76px;
+
   color: #4d5ae5;
-  display: inline-block;
+}
+.logostudio {
+  color: #2e2f42;
+}
+.nav-list {
+  display: flex;
+  align-items: center;
+  gap: 40px;
 }
 
-.footer .black-white {
-  color: #f4f4fd;
+.nav-list-item {
+  display: block;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
+  padding: 24px 0;
 }
-
-.header-link:hover,
-.header-link:focus {
+.nav-list-item:hover {
   color: #404bbf;
 }
-
-.cta:hover,
-.cta:focus {
-  background-color: #404bbf;
+.nav-list-item:focus {
+  color: #404bbf;
+}
+.contact-list {
+  display: flex;
+  gap: 40px;
+}
+.client-contact {
+  margin-left: auto;
+}
+.client-contact {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #434455;
+  font-style: normal;
+}
+.client-contact:hover {
+  color: #404bbf;
+}
+.client-contact:focus {
+  color: #404bbf;
+}
+.contact-list {
+  display: flex;
+}
+.section-title {
+  background: #2e2f42;
+  padding: 188px 0;
 }
 
+.title {
+  max-width: 496px;
+  font-weight: 700;
+  font-size: 56px;
+  line-height: 1.07;
+  letter-spacing: 0.02em;
+  text-align: center;
+  color: #fff;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 48px;
+}
+.button {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #fff;
+  background-color: #4d5ae5;
+  font-family: 'Roboto', sans-serif;
+  cursor: pointer;
+  display: block;
+  margin-right: auto;
+  margin-left: auto;
+  min-width: 169px;
+  height: 56px;
+  border: none;
+  border-radius: 4px;
+}
+.button:hover {
+  background-color: #404bbf;
+  color: #fff;
+}
+.button:focus {
+  background-color: #404bbf;
+  color: #fff;
+}
+.features {
+  padding: 120px 0;
+}
 .visually-hidden {
   position: absolute;
   width: 1px;
@@ -82,226 +178,95 @@ button {
   overflow: hidden;
 }
 
-/* ------------------HEADER------------------------------ */
-.header {
-  border-bottom: 1px solid #e7e9fc;
-}
-
-.header .container {
+.info-list {
   display: flex;
-  align-items: center;
+  gap: 24px;
+  padding: 0;
 }
-
-.header-nav {
-  display: flex;
-  align-items: center;
+.info-list-item {
+  flex-basis: calc((100% - 72px) / 4);
 }
-
-.header-nav-logo {
-  margin-right: 76px;
-  padding: 24px 0;
-}
-
-.header-nav-list {
-  display: flex;
-  align-items: center;
-  gap: 40px;
-}
-
-.header-nav-item {
-}
-
-.header-nav-link {
-  display: block;
-  padding: 24px 0;
+.info-list-title {
   font-weight: 500;
-  line-height: 1.5;
+  font-size: 20px;
+  line-height: 1.2;
   letter-spacing: 0.02em;
   color: #2e2f42;
+  margin-bottom: 8px;
 }
-
-.header-address {
-  font-style: normal;
-  margin-left: auto;
-}
-
-.header-address-list {
-  display: flex;
-  align-items: center;
-  gap: 40px;
-}
-
-.header-address-item {
-}
-
-.header-address-link {
-  display: inline-block;
-  padding-top: 24px;
-  padding-bottom: 24px;
+.info-list-text {
+  font-weight: 400;
+  font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
 }
-
-/* ------------------HEADER------------------------------ */
-
-/* ------------------HERO------------------------------ */
-.hero {
-  background-color: #2e2f42;
-  padding: 188px 0;
-}
-
-.hero-title {
-  font-size: 56px;
-  line-height: 1.07;
-  letter-spacing: 0.02em;
-  text-align: center;
-  color: #fff;
-  max-width: 496px;
-  margin-right: auto;
-  margin-left: auto;
-  margin-bottom: 48px;
-}
-
-.hero-button {
-  background-color: #4d5ae5;
-  font-weight: 500;
-  line-height: 1.5;
-  letter-spacing: 0.04em;
-  color: #fff;
-  border-radius: 4px;
-  padding: 16px 32px;
-  display: block;
-  margin: 0 auto;
-  height: 56px;
-  min-width: 169px;
-  border: none;
-}
-
-/* ------------------HERO------------------------------ */
-
-/* ------------------FEATURES------------------------------ */
-
-.features {
+.section-team {
+  background: #f4f4fd;
   padding: 120px 0;
 }
-
-.features-list {
-  display: flex;
-  gap: 24px;
-}
-
-.features-item {
-  flex-basis: calc((100% - 72px) / 4);
-}
-
-.features-subtitle {
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 1.2;
-  letter-spacing: 0.02em;
-  color: #2e2f42;
-  margin-bottom: 8px;
-}
-
-.features-text {
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-}
-
-/* ------------------FEATURES------------------------------ */
-
-/* ------------------TEAM------------------------------ */
-
-.team {
-  background-color: #f4f4fd;
-  padding: 120px 0;
-}
-
 .team-title {
+  font-weight: 700;
   font-size: 36px;
-  text-transform: capitalize;
   line-height: 1.11;
   letter-spacing: 0.02em;
   text-align: center;
+  text-transform: capitalize;
   color: #2e2f42;
   margin-bottom: 72px;
 }
-
 .team-list {
   display: flex;
+  padding: 0;
   gap: 24px;
 }
-
-.team-item {
-  background-color: #fff;
+.team-members {
+  background: #fff;
   border-radius: 0 0 4px 4px;
-
   width: calc((100% - 72px) / 4);
 }
-
-.team-image {
+.member-name {
+  padding: 32px 0;
 }
-
-.team-subtitle {
+.team-members-title {
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
   text-align: center;
+  text-transform: capitalize;
   color: #2e2f42;
   margin-bottom: 8px;
 }
-
-.team-text {
+.team-members-text {
+  font-weight: 400;
+  font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   text-align: center;
+  color: #434455;
 }
-
-.team-border {
-  padding: 32px 0px;
-}
-
-/* ------------------TEAM------------------------------ */
-
-/* ------------------PORTFOLIO------------------------------ */
 .portfolio {
   padding: 120px 0;
 }
-
-.portfolio-title {
+.title-portfolio {
+  font-weight: 700;
   font-size: 36px;
-  text-transform: capitalize;
   line-height: 1.11;
   letter-spacing: 0.02em;
   text-align: center;
+  text-transform: capitalize;
   color: #2e2f42;
   margin-bottom: 72px;
 }
-
-.portfolio-list {
+.portfolio-card {
   display: flex;
   flex-wrap: wrap;
-  column-gap: 24px;
   row-gap: 48px;
+  column-gap: 24px;
+  padding: 0;
 }
-
-.portfolio-item {
-  width: calc((100% - 48px) / 3);
-}
-
-.portfolio-border {
-  border-bottom: 1px solid #e7e9fc;
-  border-left: 1px solid #e7e9fc;
-  border-right: 1px solid #e7e9fc;
-  padding: 32px 16px;
-}
-
-.portfolio-img {
-}
-
-.portfolio-subtitle {
+.portfolio-card-title {
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
@@ -309,28 +274,44 @@ button {
   color: #2e2f42;
   margin-bottom: 8px;
 }
-
-.portfolio-text {
+.portfolio-item {
+  width: calc((100% - 48px) / 3);
+}
+.portfolio-list {
+  padding: 32px 16px;
+  border: 1px solid #e7e9fc;
+  border-top: none;
+}
+.portfolio-card-text {
+  font-weight: 400;
+  font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
+  color: #434455;
 }
-
-/* ------------------PORTFOLIO------------------------------ */
-
-/* ------------------FOOTER------------------------------ */
 .footer {
   background-color: #2e2f42;
   padding: 100px 0;
 }
-
-.footer-logo {
-  margin-bottom: 16px;
+.logo-footer {
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #4d5ae5;
+  font-family: 'Raleway', sans-serif;
   display: inline-block;
+  margin-bottom: 16px;
 }
-
+.footer-logostudio {
+  color: #f4f4fd;
+}
 .footer-text {
-  max-width: 264px;
+  font-weight: 400;
+  font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #f4f4fd;
+  max-width: 264px;
 }
